Fixed nav elements wrapping

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -29,7 +29,7 @@ div.mobile-header {
     height: 10rem;
     left: 0;
     justify-content: space-between;
-    padding: 1rem 4rem;
+    padding: 1rem 2rem;
     position: fixed;
     top: 0;
     width: 100%;
@@ -51,7 +51,7 @@ footer {
     display: flex;
     font-size: small;
     justify-content: space-around;
-    padding: 0.5rem;
+    padding: 0.5em;
 }
 
 h1, h2, h3 {
@@ -100,7 +100,7 @@ nav {
         color: #252525;
         display: block;
         font-size: x-large;
-        margin: 4rem;
+        margin: 2em;
         text-decoration: none;
     }
 
@@ -139,6 +139,10 @@ section {
     cursor: pointer;
     display: block;
 }
+
+    .checkbtn span {
+        font-size: xx-large;
+    }
 
 .flex-even {
     display: flex;
@@ -266,7 +270,7 @@ section {
         flex-direction: row;
         height: 10rem;
         justify-content: space-between;
-        padding: 1rem 4rem;
+        padding: 1rem 2rem;
         position: fixed;
         width: 100%;
         z-index: 1;
@@ -284,12 +288,8 @@ section {
 
         nav a {
             display: inline;
-            font-size: large;
-            margin: 0.25rem 0.5rem;
-        }
-
-        nav img {
-            margin-left: 0.5em;
+            font-size: medium;
+            margin: 0.25em 0.5em;
         }
 
     .checkbtn {
